--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,16 @@
         <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>kelompok2.projectbp1.ProjectBP1</exec.mainClass>
     </properties>
-            <dependency>
+    <dependencies>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
-<dependency>
-    <groupId>net.sf.jasperreports</groupId>
-    <artifactId>jasperreports</artifactId>
-    <version>7.0.1</version>
-</dependency>
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>7.0.1</version>
+            </dependency>
+    </dependencies>
 </project>
